# trailborn

./: Cargo.toml  Trailborn.gdextension  Trailborn.gdextension.uid  icon.svg.import  project.godot
assets/shaders/: wavy.gdshader  wavy.gdshader.uid
assets/textures/plants/: Autumn_tree1.png.import  Autumn_tree2.png.import  Autumn_tree3.png.import  Broken_tree1.png.import  Broken_tree2.png.import  Broken_tree3.png.import  Broken_tree4.png.import  Broken_tree5.png.import  Broken_tree6.png.import  Broken_tree7.png.import  Burned_tree1.png.import  Burned_tree2.png.import  Burned_tree3.png.import  Christmas_tree1.png.import  Christmas_tree2.png.import  Christmas_tree3.png.import  Flower_tree1.png.import  Flower_tree2.png.import  Flower_tree3.png.import  Fruit_tree1.png.import  Fruit_tree2.png.import  Fruit_tree3.png.import  Moss_tree1.png.import  Moss_tree2.png.import  Moss_tree3.png.import  Palm_tree1_1.png.import  Palm_tree1_2.png.import  Palm_tree1_3.png.import  Palm_tree2_1.png.import  (+53 more)
entities/: player.tscn
entity/: player.tscn
nodes/entities/: player.tscn
nodes/objects/: grass.tscn  ground_tile.tscn  tree.tscn
nodes/screens/: game.tscn
scenes/: game.tscn  home_screen.tscn
screen/: game.tscn  home.tscn
src/: lib.rs  tests.rs
src/core/: collision.rs  constants.rs  mod.rs  position.rs  settings.rs
src/effects/: mod.rs  player_reveal.rs
src/entities/: mod.rs  player.rs  traits.rs
src/entity/: mod.rs  player.rs
src/macros/: enum_var.rs  mod.rs
src/scenes/: home_screen.rs
src/ui/: camera.rs
src/world/: chunk.rs  mod.rs  world.rs
(+28 files in other folders)
